@@ -48,8 +48,3 @@ typedef unsigned char uch;
 # endif /* ifndef NDEBUG */
 #endif /* ifndef REDEBUG */
 #include <assert.h>
-
-/* for old systems with bcopy() but no memmove() */
-#ifdef USEBCOPY
-# define	memmove(d, s, c)	bcopy(s, d, c)
-#endif /* ifdef USEBCOPY */
